--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackCompose">
         <activity
+            android:name=".Episode5"
+            android:exported="true"
+            android:label="@string/title_activity_episode5"
+            android:theme="@style/Theme.JetpackCompose.NoActionBar" />
+        <activity
             android:name=".Episode3"
             android:exported="true"
             android:label="@string/title_activity_episode3"
