--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackCompose">
-
+        <activity
+            android:name=".Episode10"
+            android:exported="true"
+            android:label="@string/title_activity_episode10"
+            android:theme="@style/Theme.JetpackCompose.NoActionBar" />
+        <!-- <activity -->
+        <!-- android:name=".Episode9" -->
+        <!-- android:exported="true" -->
+        <!-- android:label="@string/title_activity_episode9" -->
+        <!-- android:theme="@style/Theme.JetpackCompose.NoActionBar"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity
             android:name=".Episode8"
             android:exported="true"
@@ -23,7 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Episode7"
             android:exported="true"
@@ -54,7 +67,6 @@
             android:exported="true"
             android:label="@string/title_activity_episode3"
             android:theme="@style/Theme.JetpackCompose.NoActionBar" />
-
         <activity
             android:name=".Episode6"
             android:exported="true"
