--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,15 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
+    implementation 'androidx.activity:activity-compose:1.3.0-beta01'
 //    implementation "com.google.accompanist:accompanist-coil:0.9.0"
 //    implementation "com.google.accompanist:accompanist-coil:0.9.0"
     implementation "com.google.accompanist:accompanist-glide:0.10.0"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 //    implementation("io.coil-kt:coil:1.2.1")
+
+    //Constarint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
